# Proteus

./: .gitignore  README.md  UI.py  pyproject.toml
.github/workflows/: ci.yml  generate-icns.yml  release.yml
Refactor/: main.py
packaging/: Proteus.icns  Proteus.spec  build.bat  build.sh  version_info.txt
src/proteus/: __init__.py  __main__.py  app.py
src/proteus/commands/: __init__.py  undo_commands.py
src/proteus/core/: __init__.py  image_io.py  pca.py  processing.py  state.py  utils.py
src/proteus/resources/: __init__.py
src/proteus/ui/: canvas.py  dialogs.py  main_window.py  qt_image.py  sidebar.py  status_bar.py  theme.py  top_bar.py
tests/: test_pca.py  test_processing.py
