[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proteus-image"
version = "3.0.2"
description = "Proteus - Scientific Image Processing Desktop Application"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pyinstaller>=6.0",
]

[project.scripts]
proteus = "proteus.app:main"

[project.gui-scripts]
proteus-gui = "proteus.app:main"

[tool.setuptools.packages.find]
where = ["src"]
